[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/placeholder-5.png" type="Texture" id=1]
[ext_resource path="res://sprites/rottakenguru-sh.png" type="Texture" id=2]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 32, 64, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "squish",
"speed": 19.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.5, 10.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.25, 6.125 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 31, 8 )

[node name="enemy" type="KinematicBody2D"]
position = Vector2( 496, 400 )
collision_layer = 16
collision_mask = 11
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 4.5 )
shape = SubResource( 2 )

[node name="floorchecker" type="RayCast2D" parent="."]
position = Vector2( 0, -101.344 )
enabled = true
cast_to = Vector2( 0, 118.175 )
collision_mask = 8

[node name="topchecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="topchecker"]
position = Vector2( 0.75, -14 )
shape = SubResource( 3 )

[node name="sidechecker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="sidechecker"]
position = Vector2( 1, 4 )
shape = SubResource( 4 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.128
one_shot = true

[node name="soundhurt" type="AudioStreamPlayer" parent="."]

[node name="soundstomp" type="AudioStreamPlayer" parent="."]
volume_db = -7.091

[connection signal="body_entered" from="topchecker" to="." method="_on_topchecker_body_entered"]
[connection signal="body_entered" from="sidechecker" to="." method="_on_sidechecker_body_entered"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
